feat: add endpoint that accept image
